Updated the wording in S ps cases for forced values.  Fixed some wording in various cases.

--- a/model/scheme/core-operational-semantics.tex
+++ b/model/scheme/core-operational-semantics.tex
@@ -79,7 +79,11 @@ $\mathscr{E}[\mathtt{if0}$ $\overline{0}$ $e_{S}^{1}$ $e_{S}^{2}]_{S}\rightarrow
 
 \vspace{5pt}
 
-$\mathscr{E}[\mathtt{if0}$ $v_{S}$ $e_{S}^{1}$ $e_{S}^{2}]_{S}\rightarrow\mathscr{E}[e_{S}^{2}]$ $(v_{S}\neq\overline{0})$ \\
+$\mathscr{E}[\mathtt{if0}$ $\overline{n}$ $e_{S}^{1}$ $e_{S}^{2}]_{S}\rightarrow\mathscr{E}[e_{S}^{2}]$ $(n\neq 0)$ \\
+
+\vspace{5pt}
+
+$\mathscr{E}[\mathtt{if0}$ $v_{S}$ $e_{S}^{1}$ $e_{S}^{2}]_{S}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Not a number"$]$ $(v_{S}\neq\overline{n})$ \\
 
 \vspace{5pt}
 
