--- a/proof/cases/progress/scheme/if0.tex
+++ b/proof/cases/progress/scheme/if0.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$e_{S}=\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}$
+$e_{S}=\mathtt{if0}$ $e_{S}^{1}$ $e_{S}^{2}$ $e_{S}^{3}$
 
-$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{4}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}$ is a value then $\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}\rightarrow e_{S}^{2}$ if $e_{S}^{1}=\overline{0}$ or $\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}\rightarrow e_{S}^{3}$ otherwise.  If $e_{S}^{1}\rightarrow e_{S}^{4}$ then $\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}\rightarrow \mathtt{if0}\;e_{S}^{4}\;e_{S}^{2}\;e_{S}^{3}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}\rightarrow$ \emph{\textbf{Error}:\;string}.
+$e_{S}^{1}$ is a forced value or $e_{S}^{1}\rightarrow e_{S}^{4}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{4}$ then $\mathtt{if0}$ $e_{S}^{1}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow \mathtt{if0}$ $e_{S}^{4}$ $e_{S}^{2}$ $e_{S}^{3}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $\mathtt{if0}$ $e_{S}^{1}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow$ \emph{\textbf{Error}: string}.  $e_{S}^{1}$ is a forced value otherwise.  If $e_{S}^{1}=\overline{0}$ then $\mathtt{if0}$ $\overline{0}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow e_{S}^{2}$.  If $e_{S}^{1}=\overline{n}$ $(n\neq 0)$ then $\mathtt{if0}$ $\overline{n}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow e_{S}^{3}$.  If $e_{S}^{1}\neq\overline{n}$ then $\mathtt{if0}$ $e_{S}^{1}$ $e_{S}^{2}$ $e_{S}^{3}\rightarrow\mathtt{wrong}$ \emph{``Not a number"}.
 \end{case}
