--- a/proof/cases/progress/scheme/variable.tex
+++ b/proof/cases/progress/scheme/variable.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$e_{A}=x$ where $A\in\lbrace H,M,S\rbrace$
+$e_{S}=x$
 
-Cannot occur because $e_{A}$ is closed.
+Cannot occur because $e_{S}$ is closed.
 \end{case}
