--- a/proof/cases/progress/scheme/cons-e.tex
+++ b/proof/cases/progress/scheme/cons-e.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$e_{A}=\mathtt{cons}\;e_{A}^{1}\;e_{A}^{2}$ where $A\in\lbrace M,S\rbrace$
+$e_{S}=\mathtt{cons}$ $e_{S}^{1}$ $e_{S}^{2}$
 
-$e_{A}^{1}$ is a value or $e_{A}^{1}\rightarrow e_{A}^{3}$ or $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{A}^{1}\rightarrow e_{A}^{3}$ then $\mathtt{cons}\;e_{A}^{1}\;e_{A}^{2}\rightarrow\mathtt{cons}\;e_{A}^{3}\;e_{A}^{2}$.  If $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $\mathtt{cons}\;e_{A}^{1}\;e_{A}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  $e_{A}^{2}$ is a value or $e_{A}^{2}\rightarrow e_{A}^{4}$ or $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{A}^{2}\rightarrow e_{A}^{4}$ and $e_{M}^{1}$ is a value then $\mathtt{cons}\;e_{A}^{1}\;e_{A}^{2}\rightarrow\mathtt{cons}\;e_{A}^{1}\;e_{A}^{4}$.  If $e_{A}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} then $\mathtt{cons}\;e_{A}^{1}\;e_{A}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  If $e_{A}^{1}$ and $e_{A}^{2}$ are values then $\mathtt{cons}\;e_{A}^{1}\;e_{A}^{2}$ is a value.
+$e_{S}^{1}$ is a forced value or $e_{S}^{1}\rightarrow e_{S}^{3}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{3}$ then $\mathtt{cons}$ $e_{S}^{1}$ $e_{S}^{2}\rightarrow\mathtt{cons}$ $e_{S}^{3}$ $e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $\mathtt{cons}$ $e_{S}^{1}$ $e_{S}^{2}\rightarrow$ \emph{\textbf{Error}: string}.  $e_{S}^{2}$ is a forced value or $e_{S}^{2}\rightarrow e_{S}^{4}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{S}^{2}\rightarrow e_{S}^{4}$ and $e_{M}^{1}$ is a forced value then $\mathtt{cons}$ $e_{S}^{1}$ $e_{S}^{2}\rightarrow\mathtt{cons}$ $e_{S}^{1}$ $e_{S}^{4}$.  If $e_{S}^{2}\rightarrow$ \emph{\textbf{Error}: string} then $\mathtt{cons}$ $e_{S}^{1}$ $e_{S}^{2}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{S}^{1}$ and $e_{S}^{2}$ are forced values then $\mathtt{cons}$ $e_{S}^{1}$ $e_{S}^{2}$ is a forced value.
 \end{case}
