--- a/proof/cases/progress/scheme/predicates.tex
+++ b/proof/cases/progress/scheme/predicates.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $e_{S}=p$ $e_{S}^{1}$
 
-$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{2}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $p$ $e_{S}^{1}\rightarrow p$ $e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $p$ $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.  $e_{S}^{1}$ is a value otherwise.  If $p=\mathtt{fun?}$ then $p$ $e_{S}^{1}\rightarrow\overline{0}$ if $e_{S}^{1}=\lambda x.e_{S}^{3}$ and $p$ $e_{S}^{1}\rightarrow\overline{1}$ otherwise.  If $p=\mathtt{list?}$ then $p$ $e_{S}^{1}\rightarrow\overline{0}$ if $e_{S}^{1}\in\lbrace\mathtt{nil},\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ and $p$ $e_{S}^{1}\rightarrow\overline{1}$ otherwise.  If $p=\mathtt{null?}$ then $p$ $e_{S}^{1}\rightarrow\overline{0}$ if $e_{S}^{1}=\mathtt{nil}$ and $p$ $e_{S}^{1}\rightarrow\overline{1}$ if $e_{S}^{1}\in\lbrace\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ and $p$ $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} otherwise.  If $p=\mathtt{num?}$ then $p$ $e_{S}^{1}\rightarrow\overline{0}$ if $e_{S}^{1}=\overline{n}$ and $p$ $e_{S}^{1}\rightarrow\overline{1}$ otherwise.
+$e_{S}^{1}$ is a forced value or $e_{S}^{1}\rightarrow e_{S}^{2}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $p$ $e_{S}^{1}\rightarrow p$ $e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $p$ $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  $e_{S}^{1}$ is a forced value otherwise.  If $p=\mathtt{fun?}$ then $\mathtt{fun?}$ $e_{S}^{1}\rightarrow\overline{0}$ if $e_{S}^{1}=\lambda x.e_{S}^{3}$ and $\mathtt{fun?}$ $e_{S}^{1}\rightarrow\overline{1}$ otherwise.  If $p=\mathtt{list?}$ then $\mathtt{list?}$ $e_{S}^{1}\rightarrow\overline{0}$ if $e_{S}^{1}\in\lbrace\mathtt{nil},\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ and $\mathtt{list?}$ $e_{S}^{1}\rightarrow\overline{1}$ otherwise.  If $p=\mathtt{null?}$ then $\mathtt{null?}$ $e_{S}^{1}\rightarrow\overline{0}$ if $e_{S}^{1}=\mathtt{nil}$ and $\mathtt{null?}$ $e_{S}^{1}\rightarrow\overline{1}$ if $e_{S}^{1}\in\lbrace\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ and $\mathtt{null?}$ $e_{S}^{1}\rightarrow\mathtt{wrong}$ \emph{``Not a list"} otherwise.  If $p=\mathtt{num?}$ then $\mathtt{num?}$ $e_{S}^{1}\rightarrow\overline{0}$ if $e_{S}^{1}=\overline{n}$ and $\mathtt{num?}$ $e_{S}^{1}\rightarrow\overline{1}$ otherwise.
 \end{case}
