Revised the model to remove the extra eval contexts and add the force op to M and S.  Finally got the grammar and typing rules laid out and looking decent.  Kill me now.

--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -98,22 +98,38 @@ If it is a Scheme value wrapped in an inner boundary, the outer boundary reduces
 
 \input{model/haskell/typing-rules.tex}
 
+\clearpage
+
 \input{model/haskell/core-operational-semantics.tex}
 
+\clearpage
+
 \input{model/haskell/interoperation-operational-semantics.tex}
+
+\clearpage
 
 \input{model/ml/grammar.tex}
 
 \input{model/ml/typing-rules.tex}
 
+\clearpage
+
 \input{model/ml/core-operational-semantics.tex}
 
+\clearpage
+
 \input{model/ml/interoperation-operational-semantics.tex}
+
+\clearpage
 
 \input{model/scheme/grammar.tex}
 
 \input{model/scheme/typing-rules.tex}
 
+\clearpage
+
 \input{model/scheme/core-operational-semantics.tex}
+
+\clearpage
 
 \input{model/scheme/interoperation-operational-semantics.tex}
