--- a/model/ml/core-operational-semantics.tex
+++ b/model/ml/core-operational-semantics.tex
@@ -3,7 +3,7 @@
 \begin{tabular}{l}
 \vspace{5pt}
 
-$\mathscr{E}[(\lambda x:T.e_{M})$ $u_{M}]_{M}\rightarrow\mathscr{E}[e_{M}[u_{M}/x]]$ \\
+$\mathscr{E}[(\lambda x:T.e_{M})$ $v_{M}]_{M}\rightarrow\mathscr{E}[e_{M}[v_{M}/x]]$ \\
 
 \vspace{5pt}
 
