--- a/model/scheme/core-operational-semantics.tex
+++ b/model/scheme/core-operational-semantics.tex
@@ -3,7 +3,7 @@
 \begin{tabular}{l}
 \vspace{5pt}
 
-$\mathscr{E}[(\lambda x.e_{S})$ $u_{S}]_{S}\rightarrow\mathscr{E}[e_{S}[u_{S}/x]]$ \\
+$\mathscr{E}[(\lambda x.e_{S})$ $v_{S}]_{S}\rightarrow\mathscr{E}[e_{S}[v_{S}/x]]$ \\
 
 \vspace{5pt}
 
