--- a/model/scheme/typing-rules.tex
+++ b/model/scheme/typing-rules.tex
@@ -18,17 +18,20 @@
 \[
 \frac{\Gamma\vdash_{S}e_{S}^{1}:TST\quad\Gamma\vdash_{S}e_{S}^{2}:TST}{\Gamma\vdash_{S}e_{S}^{1}\;e_{S}^{2}:TST}
 \quad
-\frac{\Gamma\vdash_{S}e_{S}^{1}:TST\quad\Gamma\vdash_{S}e_{S}^{2}:TST}{\Gamma\vdash_{S}o\;e_{S}^{1}\;e_{S}^{2}:TST}
+\frac{\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{S}f\;e_{S}:TST}
 \]
 \[
-\frac{\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{S}p\;e_{S}:TST}
+\frac{\Gamma\vdash_{S}e_{S}^{1}:TST\quad\Gamma\vdash_{S}e_{S}^{2}:TST}{\Gamma\vdash_{S}o\;e_{S}^{1}\;e_{S}^{2}:TST}
 \quad
+\frac{\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{S}p\;e_{S}:TST}
+\]
+\[
 \frac{\Gamma\vdash_{S}e_{S}^{1}:TST\quad\Gamma\vdash_{S}e_{S}^{2}:TST\quad\Gamma\vdash_{S}e_{S}^{3}:TST}{\Gamma\vdash_{S}\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}:TST}
 \]
 \[
-\frac{\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{S}f\;e_{S}:TST}
-\quad
 \frac{}{\vdash_{S}\mathtt{wrong}\;\mathrm{string}:TST}
+\quad
+\frac{\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{S}\mathtt{force}\;e_{S}:TST}
 \]
 \[
 \frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{H}e_{H}:T[T_{i}/T^{a}_{i}]}{\Gamma\vdash_{S}\;SH^{T}\;e_{H}:TST}
