--- a/model/ml/grammar.tex
+++ b/model/ml/grammar.tex
@@ -3,23 +3,19 @@
 \begin{tabular}{lcl}
 \vspace{5pt}
 
-$e_{M}$ & $=$ & $u_{M}$ $\vert$ $x$ $\vert$ $e_{M}$ $e_{M}$ $\vert$ $e_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{null?}$ $e_{M}$ $\vert$ $\mathtt{if0}$ $e_{M}$ $e_{M}$ $e_{M}$ \\
+$e_{M}$ & $=$ & $v_{M}$ $\vert$ $x$ $\vert$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{fix}$ $e_{M}$ $\vert$ $e_{M}$ $\lbrace T\rbrace$ $\vert$ $\mathtt{cons}$ $e_{M}$ $e_{M}$ $\vert$ $f$ $e_{M}$ $\vert$ $o$ $e_{M}$ $e_{M}$ \\
 
 \vspace{5pt}
 
-&& $\vert$ $\mathtt{cons}$ $e_{M}$ $e_{M}$ $\vert$ $f$ $e_{M}$ $\vert$ $\mathtt{fix}$ $e_{M}$ $\vert$ $\mathtt{wrong}^{T}$ string $\vert$ $^{T}MS$ $e_{S}$ \\
+&& $\vert$ $\mathtt{null?}$ $e_{M}$ $\vert$ $\mathtt{if0}$ $e_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{wrong}^{T}$ string $\vert$ $\mathtt{force}$ $e_{M}$ $\vert$ $^{T}MS$ $e_{S}$ \\
 
 \vspace{5pt}
 
-$u_{M}$ & $=$ & $v_{M}$ $\vert$ $^{T}MH^{T}$ $e_{H}$ \\
+$v_{M}$ & $=$ & $\lambda x:T.e_{M}$ $\vert$ $\Lambda X.e_{M}$ $\vert$ $\overline{n}$ $\vert$ $\mathtt{nil}^{T}$ $\vert$ $\mathtt{cons}$ $v_{M}$ $v_{M}$ $\vert$ $^{T}MH^{T}$ $e_{H}$ \\
 
 \vspace{5pt}
 
-$v_{M}$ & $=$ & $\lambda x:T.e_{M}$ $\vert$ $\Lambda X.e_{M}$ $\vert$ $\overline{n}$ $\vert$ $\mathtt{nil}^{T}$ $\vert$ $\mathtt{cons}$ $v_{M}$ $v_{M}$ $\vert$ $^{L}MS$ $v_{S}$ $\vert$ $^{\forall X.T}MS$ $v_{S}$ \\
-
-\vspace{5pt}
-
-&& $\vert$ $^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}$ $e_{H})$ \\
+&& $\vert$ $^{L}MS$ $v_{S}$ $\vert$ $^{\forall X.T}MS$ $v_{S}$ \\
 
 \vspace{5pt}
 
@@ -35,19 +31,15 @@ $f$ & $=$ & $\mathtt{hd}$ $\vert$ $\mathtt{tl}$ \\
 
 \vspace{5pt}
 
-$E_{M}$ & $=$ & $U_{M}$ $\vert$ $^{T}MH^{T}$ $E_{H}$ \\
+$E_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $E_{M}$ $\vert$ $\mathtt{fix}$ $E_{M}$ $\vert$ $E_{M}$ $\lbrace T\rbrace$ $\vert$ $\mathtt{cons}$ $E_{M}$ $e_{M}$ \\
 
 \vspace{5pt}
 
-$U_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $U_{M}$ $\vert$ $E_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $E_{M}$ $e_{M}$ $\vert$ $o$ $v_{M}$ $E_{M}$ $\vert$ $\mathtt{null?}$ $E_{M}$ \\
+&& $\vert$ $\mathtt{cons}$ $v_{M}$ $E_{M}$ $\vert$ $f$ $E_{M}$ $\vert$ $o$ $E_{M}$ $e_{M}$ $\vert$ $o$ $v_{M}$ $E_{M}$ $\vert$ $\mathtt{null?}$ $E_{M}$ \\
 
 \vspace{5pt}
 
-&& $\vert$ $\mathtt{if0}$ $E_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $E_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $v_{M}$ $E_{M}$ $\vert$ $f$ $E_{M}$ $\vert$ $\mathtt{fix}$ $E_{M}$ \\
-
-\vspace{5pt}
-
-&& $\vert$ $^{T}MS$ $E_{S}$
+&& $\vert$ $\mathtt{if0}$ $E_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{force}$ $E_{M}$ $\vert$ $\mathtt{force}$ $(^{T}MH^{T}$ $E_{H})$ $\vert$ $^{T}MS$ $E_{S}$
 \end{tabular}
 \caption{ML grammar and evaluation contexts}
 \label{mg}
