Combined the H and M ps theorems. Changed line spacing in S ps cases.  Revised S ps haskell and force cases.

--- a/chapter-3.tex
+++ b/chapter-3.tex
@@ -24,13 +24,9 @@ The types of Haskell and ML values determine their syntactic forms:
 
 \input{proof/lemmas/progress/canonical-forms.tex}
 
-\subsection{Haskell Progress Theorem}
+\subsection{Haskell and ML Progress Theorem}
 
-\input{proof/theorems/progress/haskell.tex}
-
-\subsection{ML Progress Theorem}
-
-\input{proof/theorems/progress/ml.tex}
+\input{proof/theorems/progress/haskell-ml.tex}
 
 \subsection{Scheme Progress Theorem}
 
