--- a/proof/cases/progress/scheme/cons-v.tex
+++ b/proof/cases/progress/scheme/cons-v.tex
@@ -1,5 +1,7 @@
 \begin{case}
+
 $e_{S}=\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2}$
 
-$\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2}$ is a forced value.
+$\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2}$ is a value.
+
 \end{case}
