--- a/proof/cases/progress/scheme/wrong.tex
+++ b/proof/cases/progress/scheme/wrong.tex
@@ -1,5 +1,7 @@
 \begin{case}
+
 $e_{S}=\mathtt{wrong}$ $\mathrm{string}$
 
-$\mathtt{wrong}$ $\mathrm{string}\rightarrow$ \emph{\textbf{Error}:\;string}.
+$\mathtt{wrong}$ $\mathrm{string}\rightarrow$ \emph{\textbf{Error}: string}.
+
 \end{case}
