--- a/proof/cases/progress/scheme/ml.tex
+++ b/proof/cases/progress/scheme/ml.tex
@@ -2,7 +2,7 @@
 
 $e_{S}=SM^{T}$ $e_{M}^{1}$
 
-$e_{M}^{1}$ is a forced value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by ML progress (Theorem \ref{mps}).  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $SM^{T}$ $e_{M}^{1}\rightarrow SM^{T}$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $SM^{T}$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{M}^{1}$ is a forced value then $T$ determines the reduction of $e_{S}$.
+$e_{M}^{1}$ is a value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by ML progress (Theorem \ref{mps}).  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $SM^{T}$ $e_{M}^{1}\rightarrow SM^{T}$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $SM^{T}$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{M}^{1}$ is a value then $T$ determines the reduction of $e_{S}$.
 
 \begin{subcase}
 
@@ -32,7 +32,7 @@ $e_{M}^{1}\in\lbrace\mathtt{nil}^{T_{1}},\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2},{
 
 $T=T_{1}^{a}$
 
-$SM^{T_{1}^{a}}$ $e_{M}^{1}$ is a forced value.
+$SM^{T_{1}^{a}}$ $e_{M}^{1}$ is a value.
 
 \end{subcase}
 
