--- a/proof/theorems/progress/haskell-ml.tex
+++ b/proof/theorems/progress/haskell-ml.tex
@@ -1,8 +1,8 @@
 \begin{theorem}
-\label{hps}
-If $\vdash_{H}e_{H}:T$ then $e_{H}$ is a value or $e_{H}\rightarrow e_{H}'$ or $e_{H}\rightarrow$ \emph{\textbf{Error}: string}.
+\label{hmps}
+If $\vdash_{A}e_{A}:T$ then $e_{A}$ is a value or $e_{A}\rightarrow e_{A}'$ or $e_{A}\rightarrow$ \emph{\textbf{Error}: string} where $A\in\lbrace H,M\rbrace$.
 \begin{proof}
-By structural induction on $e_{H}$.
+By structural induction on $e_{A}$.
 \input{proof/cases/progress/haskell-ml/function.tex}
 \input{proof/cases/progress/haskell-ml/type-abstraction.tex}
 \input{proof/cases/progress/haskell-ml/number.tex}
@@ -12,15 +12,16 @@ By structural induction on $e_{H}$.
 \input{proof/cases/progress/haskell-ml/variable.tex}
 \input{proof/cases/progress/haskell-ml/function-application-h.tex}
 \input{proof/cases/progress/haskell-ml/function-application-m.tex}
+\input{proof/cases/progress/haskell-ml/fix.tex}
 \input{proof/cases/progress/haskell-ml/type-application.tex}
-\input{proof/cases/progress/haskell-ml/arithmetic.tex}
-\input{proof/cases/progress/haskell-ml/predicate.tex}
-\input{proof/cases/progress/haskell-ml/if0.tex}
 \input{proof/cases/progress/haskell-ml/cons-e.tex}
 \input{proof/cases/progress/haskell-ml/fields-h.tex}
 \input{proof/cases/progress/haskell-ml/fields-m.tex}
-\input{proof/cases/progress/haskell-ml/fix.tex}
+\input{proof/cases/progress/haskell-ml/arithmetic.tex}
+\input{proof/cases/progress/haskell-ml/predicate.tex}
+\input{proof/cases/progress/haskell-ml/if0.tex}
 \input{proof/cases/progress/haskell-ml/wrong.tex}
+\input{proof/cases/progress/haskell-ml/force.tex}
 \input{proof/cases/progress/haskell-ml/haskell-ml.tex}
 \input{proof/cases/progress/haskell-ml/scheme.tex}
 \end{proof}
