Changed line spacing for H/M ps cases. Added H/M ps force and haskell cases.

--- a/proof/cases/progress/haskell-ml/fields-m.tex
+++ b/proof/cases/progress/haskell-ml/fields-m.tex
@@ -1,5 +1,7 @@
 \begin{case}
+
 $e_{M}=f$ $e_{M}^{1}$
 
-$e_{M}^{1}$ is a value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{M}^{1}$ is a value then $e_{M}^{1}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{M}^{1}\in\lbrace\mathtt{cons}$ $e_{M}^{3}$ $e_{M}^{4},\mathtt{nil}^{T},{^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ by canonical forms (Lemma \ref{cf}).  If $e_{M}^{1}=\mathtt{cons}$ $e_{M}^{3}$ $e_{M}^{4}$ then $f$ $(\mathtt{cons}$ $e_{M}^{3}$ $e_{M}^{4})\rightarrow e_{M}^{3}$ if $f=\mathtt{hd}$ and $f$ $(\mathtt{cons}$ $e_{M}^{3}$ $e_{M}^{4})\rightarrow e_{M}^{4}$ if $f=\mathtt{tl}$.  If $e_{M}^{1}=\mathtt{nil}^{T}$ then $f$ $\mathtt{nil}^{T}\rightarrow\mathtt{wrong}^{T}$ \emph{``Empty list"} if $f=\mathtt{hd}$ and $f$ $\mathtt{nil}^{T}\rightarrow\mathtt{wrong}^{[T]}$ \emph{``Empty list"} if $f=\mathtt{tl}$.  If $e_{M}^{1}={^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$ then $f$ $({^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow{^{T}M}H^{T}$ $e_{H}^{1}$ if $f=\mathtt{hd}$ and $f$ $({^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow{^{[T]}M}H^{[T]}$ $e_{H}^{2}$ if $f=\mathtt{tl}$.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $f$ $e_{M}^{1}\rightarrow f$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $f$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.
+$e_{M}^{1}$ is a value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by the induction hypothesis.  If $e_{M}^{1}$ is a value then $e_{M}^{1}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{M}^{1}\in\lbrace\mathtt{cons}$ $e_{M}^{3}$ $e_{M}^{4},\mathtt{nil}^{T},{^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace$ by canonical forms (Lemma \ref{cf}).  If $e_{M}^{1}=\mathtt{cons}$ $e_{M}^{3}$ $e_{M}^{4}$ then $f$ $(\mathtt{cons}$ $e_{M}^{3}$ $e_{M}^{4})\rightarrow e_{M}^{3}$ if $f=\mathtt{hd}$ and $f$ $(\mathtt{cons}$ $e_{M}^{3}$ $e_{M}^{4})\rightarrow e_{M}^{4}$ if $f=\mathtt{tl}$.  If $e_{M}^{1}=\mathtt{nil}^{T}$ then $f$ $\mathtt{nil}^{T}\rightarrow\mathtt{wrong}^{T}$ \emph{``Empty list"} if $f=\mathtt{hd}$ and $f$ $\mathtt{nil}^{T}\rightarrow\mathtt{wrong}^{[T]}$ \emph{``Empty list"} if $f=\mathtt{tl}$.  If $e_{M}^{1}={^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$ then $f$ $({^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow{^{T}M}H^{T}$ $e_{H}^{1}$ if $f=\mathtt{hd}$ and $f$ $({^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow{^{[T]}M}H^{[T]}$ $e_{H}^{2}$ if $f=\mathtt{tl}$.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $f$ $e_{M}^{1}\rightarrow f$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $f$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.
+
 \end{case}
