--- a/proof/cases/progress/haskell-ml/wrong.tex
+++ b/proof/cases/progress/haskell-ml/wrong.tex
@@ -1,5 +1,7 @@
 \begin{case}
+
 $e_{A}=\mathtt{wrong}^{T}$ $\mathrm{string}$ where $A\in\lbrace H,M\rbrace$
 
-$\mathtt{wrong}^{T}$ $\mathrm{string}\rightarrow$ \emph{\textbf{Error}:\;string}.
+$\mathtt{wrong}^{T}$ $\mathrm{string}\rightarrow$ \emph{\textbf{Error}: string}.
+
 \end{case}
