Added force cases to H and M core OS.

--- a/model/ml/core-operational-semantics.tex
+++ b/model/ml/core-operational-semantics.tex
@@ -67,7 +67,11 @@ $\mathscr{E}[\mathtt{if0}$ $\overline{n}$ $e_{M}^{1}$ $e_{M}^{2}]_{M}\rightarrow
 
 \vspace{5pt}
 
-$\mathscr{E}[\mathtt{wrong}^{T}$ string$]_{M}\rightarrow$ \textbf{Error}: string 
+$\mathscr{E}[\mathtt{wrong}^{T}$ string$]_{M}\rightarrow$ \textbf{Error}: string \\
+
+\vspace{5pt}
+
+$\mathscr{E}[\mathtt{force}$ $v_{M}]_{M}\rightarrow\mathscr{E}[v_{M}]$ $(v_{M}\neq{^{T}M}H^{T}$ $e_{H}$ or $v_{M}={^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))$
 \end{tabular}
 \caption{ML core operational semantics}
 \label{cmos}
